RESOLVED FIXED 172057
The rects returned by Element/Range.getClientRects() should not be rounded
https://bugs.webkit.org/show_bug.cgi?id=172057
Summary The rects returned by Element/Range.getClientRects() should not be rounded
Simon Fraser (smfr)
Reported 2017-05-12 16:13:57 PDT
The rects returned by Element/Range.getClientRects() should not be rounded
Attachments
Patch (70.32 KB, patch)
2017-05-12 16:19 PDT, Simon Fraser (smfr)
cdumez: review+
buildbot: commit-queue-
Archive of layout-test-results from ews106 for mac-elcapitan-wk2 (1.16 MB, application/zip)
2017-05-12 17:21 PDT, Build Bot
no flags
Archive of layout-test-results from ews123 for ios-simulator-wk2 (16.88 MB, application/zip)
2017-05-12 17:49 PDT, Build Bot
no flags
Archive of layout-test-results from ews103 for mac-elcapitan (1019.34 KB, application/zip)
2017-05-12 17:51 PDT, Build Bot
no flags
Archive of layout-test-results from ews112 for mac-elcapitan (1.94 MB, application/zip)
2017-05-12 18:19 PDT, Build Bot
no flags
Patch (105.24 KB, patch)
2017-05-12 21:46 PDT, Simon Fraser (smfr)
no flags
Simon Fraser (smfr)
Comment 1 2017-05-12 16:19:26 PDT
Chris Dumez
Comment 2 2017-05-12 16:21:20 PDT
Comment on attachment 309965 [details] Patch r=me
Radar WebKit Bug Importer
Comment 3 2017-05-12 16:49:41 PDT
Build Bot
Comment 4 2017-05-12 17:21:01 PDT
Comment on attachment 309965 [details] Patch Attachment 309965 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.webkit.org/results/3729189 New failing tests: fast/multicol/client-rects-spanners-complex.html
Build Bot
Comment 5 2017-05-12 17:21:03 PDT
Created attachment 309973 [details] Archive of layout-test-results from ews106 for mac-elcapitan-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews106 Port: mac-elcapitan-wk2 Platform: Mac OS X 10.11.6
Build Bot
Comment 6 2017-05-12 17:49:01 PDT
Comment on attachment 309965 [details] Patch Attachment 309965 [details] did not pass ios-sim-ews (ios-simulator-wk2): Output: http://webkit-queues.webkit.org/results/3729226 New failing tests: fast/transforms/bounding-rect-zoom.html fast/multicol/client-rects.html fast/multicol/newmulticol/client-rects.html fast/multicol/client-rects-spanners.html fast/dom/Range/simple-line-layout-getclientrects.html fast/multicol/client-rects-spanners-complex.html
Build Bot
Comment 7 2017-05-12 17:49:03 PDT
Created attachment 309979 [details] Archive of layout-test-results from ews123 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews123 Port: ios-simulator-wk2 Platform: Mac OS X 10.11.6
Build Bot
Comment 8 2017-05-12 17:51:11 PDT
Comment on attachment 309965 [details] Patch Attachment 309965 [details] did not pass mac-ews (mac): Output: http://webkit-queues.webkit.org/results/3729358 New failing tests: fast/multicol/client-rects-spanners-complex.html
Build Bot
Comment 9 2017-05-12 17:51:13 PDT
Created attachment 309982 [details] Archive of layout-test-results from ews103 for mac-elcapitan The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews103 Port: mac-elcapitan Platform: Mac OS X 10.11.6
Build Bot
Comment 10 2017-05-12 18:19:29 PDT
Comment on attachment 309965 [details] Patch Attachment 309965 [details] did not pass mac-debug-ews (mac): Output: http://webkit-queues.webkit.org/results/3729474 New failing tests: fast/visual-viewport/client-rects-relative-to-layout-viewport.html fast/multicol/client-rects-spanners-complex.html
Build Bot
Comment 11 2017-05-12 18:19:30 PDT
Created attachment 309987 [details] Archive of layout-test-results from ews112 for mac-elcapitan The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews112 Port: mac-elcapitan Platform: Mac OS X 10.11.6
Simon Fraser (smfr)
Comment 12 2017-05-12 21:46:22 PDT
Simon Fraser (smfr)
Comment 13 2017-05-12 22:43:36 PDT
Note You need to log in before you can comment on or make changes to this bug.