The rects returned by Element/Range.getClientRects() should not be rounded https://bugs.webkit.org/show_bug.cgi?id=172057

Reviewed by Chris Dumez.

Source/WebCore:

Fix createDOMRectVector() to not expand the rects to integer boundaries (which
quad.enclosingBoundingBox() does), but to return rects with floating point
values. This matches Chrome and Firefox, and matches getBoundingClientRect(),
which does not integral snap.

* dom/DOMRect.cpp:
(WebCore::createDOMRectVector):

LayoutTests:

Fix tests that were sensitive to rounding. I had to mark fast/text/multiglyph-characters.html
as failing (webkit.org/b/172056).

* TestExpectations:
* fast/dom/Document/CaretRangeFromPoint/caretRangeFromPoint-in-zoom-and-scroll.html:
* fast/dom/Range/getClientRects-expected.txt:
* fast/dom/Range/getClientRects.html:
* fast/dom/Range/simple-line-layout-getclientrects-expected.html:
* fast/dom/Range/simple-line-layout-getclientrects.html:
* fast/visual-viewport/client-rects-relative-to-layout-viewport-expected.txt:
* platform/ios/TestExpectations:
* platform/ios/fast/multicol/client-rects-expected.txt:
* platform/ios/fast/multicol/client-rects-spanners-complex-expected.txt:
* platform/ios/fast/multicol/client-rects-spanners-expected.txt:
* platform/ios/fast/multicol/newmulticol/client-rects-expected.txt:
* platform/ios/fast/transforms/bounding-rect-zoom-expected.txt:
* platform/mac/fast/multicol/client-rects-expected.txt:
* platform/mac/fast/multicol/client-rects-spanners-complex-expected.txt:
* platform/mac/fast/multicol/client-rects-spanners-expected.txt:
* platform/mac/fast/multicol/newmulticol/client-rects-expected.txt:
* platform/mac/fast/transforms/bounding-rect-zoom-expected.txt:

Canonical link: https://commits.webkit.org/189009@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@216817 268f45cc-cd09-0410-ab3c-d52691b4dbfc